# MemberSim

./: .gitignore  LICENSE  NOTICE  README.md  pyproject.toml
.github/workflows/: ci.yml
demos/: README.md
demos/claims-processing/: README.md
docs/: README.md  api.md
examples/: README.md  basic_usage.py  family_enrollment.py
skills/: SKILL.md  claims-processing.md  hedis-measures.md  payer-domain.md  prior-auth.md  provider-network.md  value-based-care.md  x12-edi.md
skills/reference/: SKILL.md
skills/scenarios/: SKILL.md
src/membersim/: __init__.py
src/membersim/authorization/: prior_auth.py
src/membersim/claims/: __init__.py  claim.py  payment.py
src/membersim/core/: __init__.py  accumulator.py  generator.py  member.py  models.py  plan.py  provider.py  subscriber.py
src/membersim/formats/: __init__.py  fhir.py
src/membersim/formats/fhir/: __init__.py  coverage.py
src/membersim/formats/x12/: __init__.py  base.py  (+5 more)
src/membersim/generation/: __init__.py  cohort.py  distributions.py  seed_manager.py
src/membersim/mcp/: __init__.py  server.py
src/membersim/network/: __init__.py  contract.py  fee_schedule.py
src/membersim/quality/: __init__.py  gap_generator.py  hedis.py  measure.py
src/membersim/scenarios/: __init__.py  definition.py  engine.py  events.py  timeline.py
src/membersim/validation/: claims_validator.py
src/membersim/vbc/: __init__.py  attribution.py  capitation.py
tests/: conftest.py  test_claims.py  test_generation.py  test_generator.py  test_member.py  test_quality.py  test_scenarios.py  test_vbc.py  test_x12.py
(+1 files in other folders)
